# raytracer

./: .gitignore  Cargo.toml  README.md  img.ppm
examples/: cornell_box.rs  earth.rs  final_scene.rs  quads.rs  simple_light.rs  two_checkered_worlds.rs  two_perlin_spheres.rs
src/: camera.rs  hittable.rs  interval.rs  lib.rs  main.rs  material.rs  ray.rs  shape.rs  sphere.rs  texture.rs  vector.rs
src/noise/: perlin.rs
src/shape/: a_box.rs  mod.rs  quad.rs  sphere.rs
