[package]
name = "raytracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = true

[profile.dev.package."*"]
opt-level = 3

[dependencies]
image = "0.24.7"
rand = "0.8.4"
indicatif = { version = "0.17.6", features = ["rayon"] }
itertools = "0.11.0"
rayon = "1.7.0"
